# Hasher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
